--- a/Server/FileProcessingService.Infrastructure/FileProcessingService.Infrastructure.csproj
+++ b/Server/FileProcessingService.Infrastructure/FileProcessingService.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\FileProcessingService.Application\FileProcessingService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
