# Implemented Repository and UnitOfWork pattern to interact with database and abstract database interaction.

--- a/Server/FileProcessingService.Application/FileProcessingService.Application.csproj
+++ b/Server/FileProcessingService.Application/FileProcessingService.Application.csproj
@@ -9,7 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Interfaces\" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ProcessedFileContent\Commands\" />
   </ItemGroup>
 
 </Project>
