--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,19 +5,10 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+- develop
 
 pool:
   vmImage: ubuntu-latest
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
 
 - task: NuGetCommand@2
   inputs:
