# Implemented File Upload Functionality
## Implemented Background Task Parallelism
## Refactored document processing code

--- a/Server/FileProcessingService.API/appsettings.json
+++ b/Server/FileProcessingService.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=kopadze.ge;Database=Congree;User Id=congree;Password=congree!@#"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,8 @@
     }
   },
   "AllowedHosts": "*",
-  "UseInMemoryDatabase":  true  
+  "UseInMemoryDatabase": false,
+  "App": {
+    "MaxNumOfParallelOperations": 4
+  }
 }
