#Refactored File Upload Functionality
## Enabled database migration

--- a/Server/FileProcessingService.API/appsettings.json
+++ b/Server/FileProcessingService.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=kopadze.ge;Database=Congree;User Id=congree;Password=congree!@#"
+    //"DefaultConnection": "Server=kopadze.ge;Database=Congree;User Id=congree;Password=congree!@#"
+    "DefaultConnection": "Server=(local);Database=Congree;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
