# Implemented Interactive Client App in console
## Interactive Menu
## Upload file (Send POST Request)
## Get Statuses in RetryAfter while process is completed

--- a/Server/FileProcessingService.API/appsettings.json
+++ b/Server/FileProcessingService.API/appsettings.json
@@ -14,5 +14,8 @@
   "UseInMemoryDatabase": false,
   "App": {
     "MaxNumOfParallelOperations": 4
+  },
+  "Headers": {
+    "RetryAfter": 1
   }
 }
