# Implemented Docker & Docker Orchestration Platform

--- a/Server/FileProcessingService.API/FileProcessingService.API.csproj
+++ b/Server/FileProcessingService.API/FileProcessingService.API.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>bc813e22-8281-4450-b183-53ca2c81ed57</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
