--- a/Server/FileProcessingService.API/appsettings.json
+++ b/Server/FileProcessingService.API/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=kopadze.ge;Database=Congree;User Id=congree;Password=congree!@#"
-    //"DefaultConnection": "Server=(local);Database=Congree;Integrated Security=True"
-    "DefautlConnection": "Server=db;Database=Congree;User=sa;Password=Congree!@#123;"
+    "DefaultConnection": "Server=(local);Database=Congree;Integrated Security=True"
+    //"DefaultConnection": "Server=db;Database=Congree;User=sa;Password=Congree!@#123;"
   },
   "Logging": {
     "LogLevel": {
